[workspace]
members = ["core", "broker", "worker", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ricardo Leal"]
description = "ChopFlow - A distributed task queue in Rust with Python interface"
readme = "README.md"
repository = "https://github.com/ricardoleal20/ChopFlow"
license = "Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.34", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
metrics = "0.21"
tonic = "0.10"
prost = "0.12"
async-trait = "0.1"
thiserror = "1.0"
config = "0.13"
futures = "0.3"
