[package]
name = "chopflow_cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CLI for ChopFlow distributed task queue"
license.workspace = true

[dependencies]
chopflow_core = { path = "../core" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
