[package]
name = "chopflow_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core library for ChopFlow distributed task queue"
license.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
rand = "0.8"
